# quantum-node

./: .env  .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  config.yaml  db_setup.sh  docker-compose.yml  test_config.yaml  test_db_setup.sh
.docker/: db_init.sql  db_setup.sh
dumps/: gnark_vkey.json
quantum_api_server/: Cargo.toml
quantum_api_server/src/: catcher.rs  config.rs  connection.rs  lib.rs  main.rs
quantum_api_server/src/error/: error.rs
quantum_api_server/src/repository/: mod.rs  reduction_circuit_repository.rs  task_repository.rs  user_circuit_data_repository.rs
quantum_api_server/src/routes/: auth_protocol.rs  circuit_reduction.rs  mod.rs  ping.rs  proof.rs  protocol_proof.rs  register_circuit.rs
quantum_api_server/src/service/: auth.rs  mod.rs  proof.rs  protocol.rs  register_circuit.rs
quantum_api_server/src/types/: auth.rs  circuit_registration_status.rs  generate_auth_token.rs  mod.rs  proof_data.rs  protocol_proof.rs  proving_schemes.rs  register_circuit.rs  snarkjs_groth16.rs  submit_proof.rs
quantum_api_server/src/types/db/: superproof.rs
quantum_api_server/src/utils/: vkey_sainity_check.rs
quantum_api_server/tests/: auth_protocol.rs  basic_checks.rs  circuit_reduction.rs  proof.rs  proof_status.rs  protocol_proof.rs  register_circuit.rs
quantum_api_server/tests/common/: mod.rs  rocket_setup.rs
quantum_api_server/tests/common/data/circuit/: gnark.json  snark.json
quantum_api_server/tests/common/data/invalid/: invalid_payload.json
quantum_api_server/tests/common/data/invalid/circuit/: invalid_proof_type.json  invalid_vkey.json
quantum_api_server/tests/common/data/invalid/proof/: invalid_pis.json  invalid_proof.json  invalid_proving_scheme.json
quantum_api_server/tests/common/data/proof/: gnark.json  snark.json
quantum_api_server/tests/common/db/: db_connection.rs
quantum_api_server/tests/common/repository/: auth_repository.rs  mod.rs  proof.rs  protocol_repository.rs  reduction_circuit_repository.rs  superproof_repository.rs  task_repository.rs  user_circuit_data_repository.rs
quantum_contract/: Cargo.toml
quantum_contract/src/: connection.rs  contract.rs  contract_utils.rs  main.rs  quantum_contract.rs
quantum_contract/src/abi/: Quantum.json
quantum_db/: Cargo.toml
quantum_db/src/error/: error.rs
quantum_db/src/repository/: auth.rs  auth_repository.rs  bonsai_image.rs  cost_saved_repository.rs  mod.rs  proof_repository.rs  protocol.rs  reduction_circuit_repository.rs  superproof_repository.rs  task_repository.rs  user_circuit_data_repository.rs
quantum_types/: Cargo.toml
quantum_types/src/: lib.rs
quantum_types/src/enums/: circuit_reduction_status.rs  mod.rs  proof_status.rs  proving_schemes.rs  superproof_status.rs  task_status.rs  task_type.rs
quantum_types/src/macros/: error_line.rs  mod.rs
quantum_types/src/traits/: circuit_interactor.rs  db.rs  mod.rs  pis.rs  proof.rs  vkey.rs
quantum_types/src/types/: aggregator.rs  config.rs  gnark_groth16.rs  gnark_plonk.rs  halo2_plonk.rs  halo2_poseidon.rs  hash.rs  imt.rs  mod.rs  nitro_att.rs  plonk2.rs  proof_gen_configs.rs  riscs0.rs  snarkjs_groth16.rs  sp1.rs  tee.rs
quantum_types/src/types/db/: bonsai_image.rs  mod.rs  mysql.rs  proof.rs  protocol.rs  reduction_circuit.rs  superproof.rs  task.rs  user_circuit_data.rs
quantum_utils/: Cargo.toml
quantum_utils/src/: error_line.rs  file.rs  keccak.rs  lib.rs  logger.rs  main.rs  paths.rs
quantum_worker/: Cargo.toml  quantum_test.db
quantum_worker/src/: aggregator.rs  bonsai.rs  connection.rs  imt.rs  imt_aggregator.rs  lib.rs  main.rs  proof_generator.rs  registration.rs  utils.rs  worker.rs
quantum_worker/test_storage/0x1ee1203d66f05fe359d2887c2caea696a7bb9959691d2b2e74ee627ae6e89324/public_inputs/: pis_0x6c639be4916d20df03b138bea25e2c3c04ea540eab4aac8d1acb5f61c03e135f.json
quantum_worker/test_storage/0x1f6e0e895dcab85e90624310c7cad61d941b1d3c08d23adb878d4ab8ccf0e332/public_inputs/: pis_0x0410a271c38897c4d8ecda87e061c95d851acfdc26d8fb78f04528586799392c.json
quantum_worker/test_storage/0xb3cc5834991fa9e06a403dd65ba46e4b0845ff4e6c53b6dbf375d32dc6eddf67/public_inputs/: pis_0xd552f354f2ee6e9ee1225aa82928520b320a8ce001d2d07650cc4bb5432fe5b6.json
quantum_worker/test_storage/0xd068d1d07ca2fe9a6819acb5da3ef934b7b7e68399c043f88f26c0de9d756de4/public_inputs/: pis_0xdea616c209cd4b80e99f57bd2f7de8fcb5ca373b6ebe4c7972df7a65ec955654.json
quantum_worker/test_storage/0xe4a53912335d45c5ca1d4857b19905b840cdf9b0849379e44da24bd8d5cb39ef/public_inputs/: pis_0x1af560eb4bab00699340dd78c58c74b32a5dcd8e344ed58b042f3b663a34848d.json
quantum_worker/test_storage/0xf038a571b7f5aca6d6000f0faa915bd8139730038f8c01735796d94acd8cbc5f/public_inputs/: pis_0x46a61a90486c7662dcbc32d4c8febf03021f5a6ee5d01adbf19f3d77f57c6d49.json
quantum_worker/tests/: aggregation.rs  constant.rs  proof_generation.rs  repository.rs
scripts/server_health/: .env  quantum_servers_health_check.py  requirements.txt
src/: config.rs  connection.rs  lib.rs  main.rs
src/enums/: circuit_reduction_status.rs  mod.rs  proof_status.rs  task_type.rs
src/error/: error.rs
src/repository/: reduction_circuit_repository.rs  task_repository.rs  user_circuit_data_repository.rs
src/requests/: ping.rs  register_circuit.rs
src/service/: mod.rs  ping.rs  register_circuit.rs
src/types/: gnark.rs  gnark_groth16.rs  mod.rs  proving_schemes.rs  register_circuit.rs  task.rs  user_circuit_data.rs
src/types/db/: mod.rs  task.rs  user_circuit_data.rs
src/types/request/: mod.rs  register_circuit.rs
src/types/response/: mod.rs  regsiter_circuit.rs
src/utils/: file.rs
test_data/: gnark_plonk_vkey.json
