[package]
name = "quantum-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
num-bigint = "0.4.5"
borsh = {version = "1.5.0", features = ["derive"]}
borsh-derive = { version = "1.0.0-alpha.6" }