[package]
name = "quantum-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
num-bigint = "0.4.5"
borsh = {version = "1.5.0", features = ["derive"]}
borsh-derive = { version = "1.0.0-alpha.6" }
keccak-hash = "0.10.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "chrono", "macros" ] }
lazy_static = "1.4.0"
tokio = { version = "1.12.0", features = ["full"] }
dotenv = "0.15.0"