[package]
name = "quantum_api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
num-bigint = "0.4.5"
borsh = {version = "1.5.0", features = ["derive"]}
borsh-derive = { version = "1.0.0-alpha.6" }
keccak-hash = "0.10.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "chrono", "macros" ] }
lazy_static = "1.4.0"
tokio = { version = "1.12.0", features = ["full"] }
dotenv = "0.15.0"
serde_yaml = "0.9.30"
anyhow = "1.0.83"
quantum_types = {path = "../quantum_types"}
quantum_db = {path = "../quantum_db"}
quantum_utils = {path = "../quantum_utils"}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "json"] }
tracing-appender = "0.2.3"
hex = "0.4.3"