[package]
name = "quantum_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "chrono", "macros" ] }
quantum_types = {path = "../quantum_types"}
anyhow = "1.0.83"