[package]
name = "quantum_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "chrono", "macros" ] }
sqlx-mysql = {version = "0.7.4", features = ["rust_decimal"]}
quantum_types = {path = "../quantum_types"}
anyhow = "1.0.83"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "json"] }
tracing-appender = "0.2.3"
chrono = { version = "0.4.38", features = ["serde"] }
quantum_utils = {path = "../quantum_utils"}