[package]
name = "quantum_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
borsh = {version = "1.5.0", features = ["derive"]}
borsh-derive = { version = "1.0.0-alpha.6" }
serde_yaml = "0.9.30"
anyhow = "1.0.83"
quantum_utils = {path = "../quantum_utils"}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "json"] }
tracing-appender = "0.2.3"
num-bigint = "0.4.4"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
keccak-hash = "0.10.0"
