[package]
name = "quantum_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
borsh = {version = "1.5.0", features = ["derive"]}
borsh-derive = { version = "1.0.0-alpha.6" }
serde_yaml = "0.9.30"
anyhow = "1.0.83"
quantum_utils = {path = "../quantum_utils"}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "json"] }
tracing-appender = "0.2.3"
num-bigint = "0.4.4"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
keccak-hash = "0.10.0"
hex = "0.4.3"
chrono = { version = "0.4.38", features = ["serde"] }
tiny-merkle = "0.3.0"
bincode = "1.3.3"

snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.7-git", default-features = false, features = [
    "loader_evm",
    "halo2-pse",
] }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.7-git", default-features = false, features = [
    "loader_evm",
    "halo2-pse",
] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "chrono", "macros", "decimal" ] }
dotenv = "0.15.0"
utils = {path = "../../quantum-risc0-circuits/utils"}
agg-core = {path = "../../quantum-risc0-circuits/aggregation/core"}
quantum_circuits_interface = {path = "../../quantum-risc0-circuits/quantum_circuits_interface"}
gnark-bn254-verifier = {path = "../../gnark-bn254-verifier"}

plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git", default-features = false }

groth16-core = {path = "../../quantum-risc0-circuits/reduction/groth16/core"}
plonky2-core = {path = "../../quantum-risc0-circuits/reduction/plonky2/core"}
halo2-kzg-evm-core = {path = "../../quantum-risc0-circuits/reduction/halo2_kzg_evm/core"}

risc0-zkvm = { version = "1.0.5" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", default-features = false, tag="release/v3.0.0-rc1" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git", default-features = false, tag="release/v3.0.0-rc1" }
# sp1-core =  {path = "../../quantum-risc0-circuits/reduction/sp1/core"}
