[package]
name = "quantum_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.201", features = ["derive"]}
serde_yaml = "0.9.30"
serde_json = "1.0.117"
anyhow = "1.0.83"
keccak-hash = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "json"] }
tracing-appender = "0.2.3"
hex = "0.4.3"
num-bigint = "0.4.5"
chrono = "0.4.38"
cron = "0.12.1"
halo2curves-axiom = "=0.5.3"