[package]
name = "quantum_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quantum_types = {path = "../quantum_types"}
quantum_db = {path = "../quantum_db"}
quantum_utils = {path = "../quantum_utils"}
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "chrono", "macros" ] }
lazy_static = "1.4.0"
tokio = { version = "1.12.0", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0.83"
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "json"] }
tracing-appender = "0.2.3"

#[TODO] Change this to git repo
quantum_circuits_ffi = {path = "/home/ubuntu/quantum/quantum-circuits/quantum_circuits_ffi"}
num-bigint = "0.4.5"
keccak-hash = "0.10.0"
chrono = { version = "0.4.38", features = ["serde"] }