[package]
name = "quantum_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quantum_types = {path = "../quantum_types"}
quantum_db = {path = "../quantum_db"}
quantum_utils = {path = "../quantum_utils"}
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "chrono", "macros" ] }
lazy_static = "1.4.0"
tokio = { version = "1.12.0", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0.83"
serde_json = "1.0.117"
serde = "1.0.210"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "json"] }
tracing-appender = "0.2.3"

#[TODO] Change this to git repo
#quantum_circuits_interface = {path = "../../quantum-circuits/quantum_circuits_interface"}
num-bigint = "0.4.5"
keccak-hash = "0.10.0"
chrono = { version = "0.4.38", features = ["serde"] }

risc0-zkvm = { version = "1.0.5" }
bonsai-sdk = { version = "0.9.0", features = ["non_blocking"]}
bytemuck = "1.18.0"
ark-groth16 = "0.4.0"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
hex = "0.4.3"
bincode = "1.3.3"
agg-core = {path = "../../quantum-risc0-circuits/aggregation/core"}
utils = {path = "../../quantum-risc0-circuits/utils"}
imt-core = {path = "../../quantum-risc0-circuits/imt/core"}
quantum_circuits_interface = {path = "../../quantum-risc0-circuits/quantum_circuits_interface"}
