[package]
name = "quantum_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quantum_types = {path = "../quantum_types"}
quantum_db = {path = "../quantum_db"}
quantum_utils = {path = "../quantum_utils"}
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "chrono", "macros", "sqlite", "any" ] }
lazy_static = "1.4.0"
tokio = { version = "1.12.0", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0.83"
serde_json = "1.0.117"
serde = "1.0.210"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "json"] }
tracing-appender = "0.2.3"

#[TODO] Change this to git repo
#quantum_circuits_interface = {path = "../../quantum-circuits/quantum_circuits_interface"}
num-bigint = "0.4.5"
keccak-hash = "0.10.0"
chrono = { version = "0.4.38", features = ["serde"] }

risc0-zkvm = { git = "https://github.com/risc0/risc0.git", tag = "v1.1.1", default-features = false, features = ['std'] }
bonsai-sdk = { version = "=1.1.1", features = ["non_blocking"]}
bytemuck = "1.18.0"
ark-groth16 = "0.4.0"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
hex = "0.4.3"
bincode = "1.3.3"
utils = { git = "https://github.com/Electron-Labs/quantum-risc0-circuits.git", rev = "0f8e209d10fc1e93d83a603248a6f542d613861d" }
aggregation = { git = "https://github.com/Electron-Labs/quantum-risc0-circuits.git", rev = "0f8e209d10fc1e93d83a603248a6f542d613861d" }
# sp1-core =  {path = "../../quantum-risc0-circuits/reduction/sp1/core"}
sp1-sdk =  { git = "https://github.com/succinctlabs/sp1.git", default-features = false, tag="release/v3.0.0-rc1" }
once_cell = "1.20.2"